@@ -1,0 +1,23 @@
+#ifndef SEEN_LIBNRTYPE_NRTYPE_FORWARD_H
+#define SEEN_LIBNRTYPE_NRTYPE_FORWARD_H
+
+class font_factory;
+struct font_glyph;
+class font_instance;
+struct font_style;
+class raster_font;
+class raster_glyph;
+class raster_position;
+
+#endif /* !SEEN_LIBNRTYPE_NRTYPE_FORWARD_H */
+
+/*
+  Local Variables:
+  mode:c++
+  c-file-style:"stroustrup"
+  c-file-offsets:((innamespace . 0)(inline-open . 0)(case-label . +))
+  indent-tabs-mode:nil
+  fill-column:99
+  End:
+*/
+// vim: filetype=cpp:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
